add option to switch storage volumes
For testing on AOKP modded
Change-Id: If5fdae2e800b2581c37f8c7531c38d9a28081205

Conflicts:
	AndroidManifest.xml
	res/values/cm_strings.xml

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4767,5 +4767,11 @@ two in order to insert additional control points. \'Remove\' deletes the selecte
 
     <!-- Text to display in regulatory info screen (from device overlay). -->
     <string name="regulatory_info_text"></string>
+        <!-- Vold Switchable Pair -->
+    <string name="storage_switch_title">Use external SD as primary</string>
+    <string name="storage_switch_summary_off">Using expanded internal storage for apps and media</string>
+    <string name="storage_switch_summary_on">Using SD Card for apps and media</string>
+    <string name="reboot_prompt_title">Reboot required</string>
+    <string name="reboot_prompt_message">In order to apply the changed configuration, a reboot is required.\n\nDo you want to reboot now?</string>
 
 </resources>
